--- a/Project_prototype_main/popup.css
+++ b/Project_prototype_main/popup.css
@@ -1,18 +1,88 @@
 body {
+  width:280px;
+  height:400px;
   font-family: Arial, sans-serif;
   padding: 10px;
 }
 
 h1 {
-  font-size: 18px;
+  font-size: 30px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+}
+
+.header button {
+  margin-left: auto; /* Pushes the button to the right */
+  margin-right: 10px; /* Optional: Adds space to the right of the button */
+  background-color: rgb(0, 0, 0);
+  border: 1px solid black; /* Corrected border property */
+  border-radius: 5px;
+  width: 40px;
+  height: 40px;
+  transition: opacity 0.3s ease;
+}
+
+.header button:hover {
+  opacity: 0.8; /* Change opacity on hover */
+}
+
+.header button:focus {
+  outline: 2px solid rgb(203, 0, 0); /* Blue focus indication */
+}
+
+.header img{
+  width: 100%;
+}
+
+h2 {
+  font-size: 25px;
+}
+
+
+input {
+  margin: 0;
+  width: 20px;
+  height: 20px;
+}
+
+.radiobuttons {
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.radiocontain {
+  display: flex;
+  flex-direction: column; /* Stack children vertically */
+  justify-content: center; /* Center children vertically */
+  align-items: center; /* Center children horizontally */
+}
+
+.color {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.color input {
+  margin-right: 110px;;
+  width: 60px;
+  height: 60px;
 }
 
 label {
   display: block;
   margin-top: 10px;
-}
-
-input[type="range"],
-input[type="color"] {
-  width: 100%;
+  font-size: 19px;
 }
